--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -102,7 +102,7 @@
       {% if site.enable_footnote %}
       <p><small>Powered by Jekyll and <a href="https://github.com/yaoyao-liu/minimal-light" target="_blank" rel="noopener">Minimal Light</a> theme.</small></p>
       {% endif %}
-
+      <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=BMqNPQpHSYFNKXNz9kzWviNDlk08snGAPOf40xk0dDo"></script>
       </section>
       <footer>
         
