--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -105,7 +105,7 @@
       
       </section>
       <footer>
-        <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5mhpyxywm2l&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
+        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=BMqNPQpHSYFNKXNz9kzWviNDlk08snGAPOf40xk0dDo&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
