--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -105,7 +105,7 @@
       
       </section>
       <footer>
-        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=BMqNPQpHSYFNKXNz9kzWviNDlk08snGAPOf40xk0dDo&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=BMqNPQpHSYFNKXNz9kzWviNDlk08snGAPOf40xk0dDo&cl=ffffff&w=a"></script>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
