--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -105,7 +105,7 @@
       
       </section>
       <footer>
-        <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=BMqNPQpHSYFNKXNz9kzWviNDlk08snGAPOf40xk0dDo"></script>
+        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=BMqNPQpHSYFNKXNz9kzWviNDlk08snGAPOf40xk0dDo&cl=ffffff&w=a"></script>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
